# mixer_discord_bot

./: .gitignore  Cargo.toml  Shuttle.toml  schema.sql
entity/: Cargo.toml
entity/src/: guilds.rs  lib.rs  lobbies.rs  players.rs  prelude.rs  sea_orm_active_enums.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230704_104934_create_guilds_table.rs  m20230704_111535_create_lobbies_table.rs  m20230704_112326_create_role_type.rs  m20230704_113006_create_players_table.rs
mixer-discord-bot/: Cargo.toml
mixer-discord-bot/src/: image_manipulation.rs  main.rs
mixer-discord-bot/src/algorithm/: glicko2.rs  mod.rs
mixer-discord-bot/src/bot/: mod.rs
mixer-discord-bot/src/bot/commands/: creator.rs  lobby.rs  mod.rs  ping.rs  preference.rs  rating.rs  settings.rs
mixer-discord-bot/src/bot/interactions/: mod.rs
mixer-discord-bot/src/database/: mod.rs
mixer-discord-bot/src/database/models/: lobby.rs  mod.rs  player.rs  prelude.rs  role.rs
mixer-discord-bot/src/database/queries/: guild.rs  lobby.rs  mod.rs  player.rs  prelude.rs
mixer-discord-bot/src/mixer/: mixer.rs  mod.rs  player.rs  rating.rs  team.rs
run/database/: script.sql
src/: image_manipulation.rs  main.rs
src/bot/: handler.rs  mod.rs
src/bot/commands/: creator.rs  lobby.rs  mod.rs  ping.rs  preference.rs  rank.rs  rating.rs  settings.rs
src/bot/handlers/: command_handler.rs  event_handler.rs  mod.rs
src/bot/interactions/: mod.rs
src/database/: mod.rs
src/database/models/: guild.rs  lobby.rs  mod.rs  player.rs  role.rs
src/database/queries/: lobby.rs  player.rs
src/mixer/: mixer.rs  mod.rs  player.rs  rating.rs  role.rs  team.rs
