[package]
name = "mixer_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
serenity = { version = "*", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sqlx = { version = "*", features = ["runtime-tokio-rustls", "sqlite"] }
sea-orm = { version = "*", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
ctrlc = "*"